--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,16 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+<!--        <dependency>
             <groupId>net.riking</groupId>
             <artifactId>riking-core</artifactId>
             <version>V2.6.0.0-SNAPSHOT</version>
@@ -59,7 +69,7 @@
                     <groupId>org.javassist</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
@@ -85,7 +95,7 @@
             </exclusions>
         </dependency>
         <!-- hive -->
-        <!--<dependency>
+       <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-hadoop</artifactId>
             <version>2.5.0.RELEASE</version>
@@ -95,7 +105,7 @@
                     <artifactId>jdk.tools</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
