--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,8 +4,16 @@ global_config=/riking/global.properties
 #spring.datasource.jndi-name =
 
 #spring.datasource.initialize=true
+# spring.jpa.database = MYSQL
+spring.datasourceSec.url = jdbc:mysql://127.0.0.1:3306/cirs
+spring.datasourceSec.username = root
+spring.datasourceSec.password = root
+spring.datasourceSec.driverClassName = com.mysql.jdbc.Driver
+# spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+
+
 spring.jpa.database = MYSQL
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/cirs
+spring.datasource.url = jdbc:mysql://172.16.80.110:3306/cirs
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
